--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -8,7 +8,7 @@
 <h1>New Post</h1>
 
     <hr>
-    <h2>Create New Blog Post:</h2>
+    <h2>Create a New Blog Post:</h2>
     <form action='/posts' method='POST'>
         <label for="title">Title:</label>
         <input class="form-control" type="text" name='title' id='title' placeholder="Enter Title" aria-label="Enter Title">
